tests/baselines/reference/multipleDefaultExports02.errors.txt
m1.ts(1,25): error TS2323: Cannot redeclare exported variable 'default'.
m1.ts(1,25): error TS2393: Duplicate function implementation.
m1.ts(5,25): error TS2323: Cannot redeclare exported variable 'default'.
m1.ts(5,25): error TS2393: Duplicate function implementation.


==== m1.ts (4 errors) ====
    export default function foo() {
                            ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~~~
!!! error TS2393: Duplicate function implementation.
    
    }
    
    export default function bar() {
                            ~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
                            ~~~
!!! error TS2393: Duplicate function implementation.
    
    }
    
==== m2.ts (0 errors) ====
    import Entity from "./m1"
    
    Entity();